fixes error in if logic of jumpEvent

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ canvas {
 
 #container {
 max-width: 50em;
-background-color: rgb(82, 71, 73);
+background-color: rgb(191, 127, 139);
 margin: 0 auto;
 padding: 1em;
 display: grid;
